--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,7 +6,7 @@
 <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm)">
   <ion-list lines="inset">
     <ion-item>
-      <ion-button expand="block" type="submit" class="ion-no-margin" (click)="generate()">Tự điền thông tin
+      <ion-button expand="block" type="button" class="ion-no-margin" (click)="generate()">Tự điền thông tin
       </ion-button>
     </ion-item>
     <ion-item>
